--- a/css/gt.css
+++ b/css/gt.css
@@ -121,6 +121,31 @@ form {
   background-image: url(../images/layer.png);
 }
 
+.icon-layer2 {
+  background-image: url(../images/layer.png);
+  background-size: 80% 80%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.icon-filter {
+  background-image: url(../images/filter.png);
+  background-size: 60% 60%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.icon-layers {
+  background-image: url(../images/layers2.png);
+}
+
+.icon-grid {
+  background-image: url(../images/grid.png);
+  background-size: 60% 70%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 .icon-line {
   background-image: url(../images/line.png);
 }
