--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -137,6 +137,28 @@ form{
 .icon-layer{
 	background-image: url(#{$path_images}layer.png);
 }
+.icon-layer2{
+	background-image: url(#{$path_images}layer.png);
+	background-size: 80% 80%;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+.icon-filter{
+	background-image: url(#{$path_images}filter.png);
+	background-size: 60% 60%;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+.icon-layers{
+	background-image: url(#{$path_images}layers2.png);
+}
+.icon-grid{
+	background-image: url(#{$path_images}grid.png);
+	background-size: 60% 70%;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
 .icon-line{
 	background-image: url(#{$path_images}line.png);
 }
