--- a/templates/gt/info-history.html
+++ b/templates/gt/info-history.html
@@ -1,34 +1,37 @@
 <div class="info-form">
     
-    <div>
+    <div class="row">
         <div>Fecha</div>
         <div data-id="date_time"></div>
     </div>
-    <div>
+    <div class="row">
         <div>Position</div>
         <div>
             <span data-id="longitude"></span>, <span data-id="latitude"></span>
         </div>
     </div>
-    <div>
+    <div class="row">
         <div>Velocidad</div>
         <div data-id="speed"></div>
     </div>
-    <div>
+    <div class="row">
         <div>Orientación (°)</div>
         <div data-id="heading"></div>
     </div>
-    <div>
+    <div class="row">
         <div>Satelites</div>
         <div data-id="satellite"></div>
     </div>
-    <div>
+    <div class="row">
         <div>Distancia Recorrida</div>
         <div data-id="length"></div>
     </div>
-    <div>
+    <div class="row">
         <div>Distancia Total</div>
         <div data-id="total_length"></div>
+    </div>
+    <div  class="row inputs" data-id="xinputs">
+        
     </div>
     
 
