--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -35,7 +35,6 @@
             transform-origin: 0 0;
   }
 }
-
 @-webkit-keyframes ac_close {
   0% {
     opacity: 1;
@@ -47,7 +46,6 @@
     overflow: hidden;
   }
 }
-
 @keyframes ac_close {
   0% {
     opacity: 1;
@@ -59,8 +57,18 @@
     overflow: hidden;
   }
 }
-
 .sg-tab > .menu > .tab-menu {
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.sg-tab > .body > .tab-body:not(.tab-active) {
+  display: none !important;
+}
+
+.sg-tab2021 > .menu > .tab-menu {
   display: inline-block;
   background-color: #6f6f6f;
   text-decoration: none;
@@ -81,12 +89,10 @@
       -ms-user-select: none;
           user-select: none;
 }
-
-.sg-tab > .menu > .tab-menu.tab-active {
+.sg-tab2021 > .menu > .tab-menu.tab-active {
   background-color: red;
 }
-
-.sg-tab > .body > .tab-body:not(.tab-active) {
+.sg-tab2021 > .body > .tab-body:not(.tab-active) {
   display: none !important;
 }
 
@@ -105,7 +111,6 @@
           flex-direction: column;
   overflow: auto;
 }
-
 .sg-tab_ > .tab-menu {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -125,7 +130,6 @@
       flex-wrap: wrap;
   font-size: 9pt;
 }
-
 .sg-tab_ > .tab-menu > * {
   white-space: nowrap;
   overflow: hidden;
@@ -150,11 +154,9 @@
   /* Likely future */
   border-radius: 4px 12px 0px 0px;
 }
-
 .sg-tab_ > .tab-menu > *.tab-active {
   background-color: #cc530d;
 }
-
 .sg-tab_ > .tab-body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -166,15 +168,12 @@
   display: -ms-flexbox;
   display: flex;
 }
-
 .sg-tab_ > .tab-body > div {
   border: 4px solid red;
 }
-
 .sg-tab_ > .tab-body > div:not(.tab-active) {
   display: none;
 }
-
 .sg-tab_ > .tab-body > div.tab-active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,7 +181,6 @@
   overflow: auto;
   border: 4px solid red;
 }
-
 .sg-tab_ > .tab-body > div.tab-active > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -209,19 +207,16 @@
       -ms-user-select: none;
           user-select: none;
 }
-
 .sg-accordion > .menu > .tab-menu.tab-active {
   background-color: rgba(255, 0, 0, 0.164);
 }
-
 .sg-accordion > .menu > .tab-body.tab-active {
-  -webkit-animation: ac_open  0.5s ease-out forwards;
-          animation: ac_open  0.5s ease-out forwards;
+  -webkit-animation: ac_open 0.5s ease-out forwards;
+          animation: ac_open 0.5s ease-out forwards;
   color: yellow;
 }
-
 .sg-accordion > .menu > .tab-body:not(.tab-active) {
-  -webkit-animation: ac_close  0.1s ease-out forwards;
-          animation: ac_close  0.1s ease-out forwards;
+  -webkit-animation: ac_close 0.1s ease-out forwards;
+          animation: ac_close 0.1s ease-out forwards;
 }
 /*# sourceMappingURL=sgTab.css.map */
