--- a/sass/Mapbox.scss
+++ b/sass/Mapbox.scss
@@ -386,7 +386,8 @@
 			//color:white;
 			padding: 1px;
 			li{
-				width:100%;
+				width:50%;
+				display: inline-block;
 			}
 			text-align: center;
 			a{
