--- a/css/gt_selectText.css
+++ b/css/gt_selectText.css
@@ -1,3 +1,8 @@
+.mapboxgl-ctrl {
+  -webkit-transform: none !important;
+          transform: none !important;
+}
+
 .list-menu {
   position: fixed;
   border: 1px solid #bbbbbb;
@@ -15,17 +20,14 @@
   padding: 0px;
   font-size: 9pt;
 }
-
 .list-menu:not(.active) {
   visibility: hidden;
 }
-
 .list-menu .option {
   text-transform: uppercase;
   padding: 2px;
   line-height: 1.5em;
 }
-
 .list-menu .option.active {
   background-color: #0051ff;
   color: white;
