--- a/css/Mapbox.css
+++ b/css/Mapbox.css
@@ -281,7 +281,6 @@
   border: 0px;
   font-size: 0.8em;
   font-family: futurab;
-  width: 100%;
 }
 .filter-form.sg-form .sg-menu {
   padding: 1px;
@@ -578,6 +577,7 @@
 }
 .layer-tool .sg-form .sg-menu a {
   background-color: #096961;
+  height: 100%;
   color: white;
 }
 .layer-tool .sg-form .sg-menu a:active {
@@ -616,5 +616,58 @@ ul.trace-tool li a {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
+}
+
+.poly-tool .panel {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  right: 40px;
+}
+.poly-tool .sub-panel {
+  background-color: rgba(0, 0, 0, 0.61);
+  color: #d8d7d7;
+  position: absolute;
+  top: 210px;
+  width: 200px;
+  height: auto;
+  right: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.poly-tool .sub-panel * {
+  text-align: center;
+}
+.poly-tool .body1 {
+  position: absolute;
+  height: 300px;
+  background-color: #a8059a;
+  top: 0px !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.poly-tool .body1 .main-menu {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  background-color: #b85223;
+  border: 1px solid blue;
+  width: 200px;
+}
+.poly-tool .body1 .panel-menu {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+.poly-tool .body1 .panel-menu button {
+  display: inline-block;
 }
 /*# sourceMappingURL=Mapbox.css.map */
