--- a/sass/Mapbox.scss
+++ b/sass/Mapbox.scss
@@ -373,7 +373,7 @@
 					font-size: 0.8em;
 					//padding: 4px;
 					font-family: futurab;
-					width: 100%;
+					//width: 100%;
 				}
 
 			}
@@ -709,15 +709,18 @@
 			text-align: center;
 			display: flex;
 			flex-direction: row;
+			//align-items: stretch;
 			//background-color: rgb(221, 221, 221);
+
 			>*{
 				flex: 1 1 auto;
 				//border-top: 4px solid green;
 				line-height: 1.6em;
 			}
 			a{
-
 				background-color: rgb(9, 105, 97);
+				height: 100%;
+				//
 				color:white;
 				&:active{
 
@@ -757,4 +760,59 @@ ul.trace-tool{
 		}
 	}
 
+}
+
+
+.poly-tool{
+	.panel{
+		position: absolute;
+		width: 200px;
+		height: 200px;
+
+		right:40px;
+	}
+	.sub-panel{
+		background-color:rgba(0, 0, 0, 0.61);
+		color:#d8d7d7;
+		position: absolute;
+		top:210px;
+		width: 200px;
+		height: auto;
+
+		right:40px;
+		display: grid;
+		grid-template-columns:1fr 1fr;
+		*{
+			text-align: center;
+		}
+
+	}
+	.body1{
+		.main-menu{
+			flex: 1 1 auto;
+			background-color: #b85223;
+			border: 1px solid blue;
+			width: 200px;
+		}
+
+		position: absolute;
+		//width: 200px;
+		height: 300px;
+		//margin-right: 200px!important;
+
+		background-color: #a8059a;
+		top:0px !important;
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		.panel-menu{
+
+			flex: 0 0 auto;
+			button{
+				display: inline-block;
+			}
+
+		}
+	}
 }
