--- a/sass/gt_selectText.scss
+++ b/sass/gt_selectText.scss
@@ -1,3 +1,7 @@
+.mapboxgl-ctrl{
+	transform: none!important;
+}
+
 .list-menu{
 	position: fixed;
 	border: 1px solid rgb(187, 187, 187);
@@ -11,8 +15,8 @@
 	overflow: auto;
 	padding: 0px;
 	font-size: 9pt;
-  
-	
+
+
 	&:not(.active){
 	  visibility: hidden;
 	}
