--- a/templates/gt/login.html
+++ b/templates/gt/login.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="right-side">
 			<div class="webcar-name">Logín: {@module_name}</div>
-			--4--
+			<form id="panel-4"></form>
 			<img class="gtrack-logo" src="{@IMAGES_PATH}best_logo.png"/>
 		</div>
 
