--- a/css/gt.css
+++ b/css/gt.css
@@ -935,4 +935,38 @@ form {
   overflow: auto;
   height: 100%;
 }
+
+.mark-tool-g2 {
+  border: 3px solid white;
+  height: 120px;
+  overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  /*
+  display: grid;
+  grid-template-columns: repeat(8, 30px);
+  gap: 5px;
+  */
+}
+.mark-tool-g2 * > {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.mark-tool-g2 div {
+  width: 30px;
+  height: 30px;
+}
+.mark-tool-g2 div :hover {
+  cursor: pointer;
+}
+.mark-tool-g2 div img {
+  width: 100%;
+  max-height: 100%;
+}
 /*# sourceMappingURL=gt.css.map */
