--- a/sass/Mapbox.scss
+++ b/sass/Mapbox.scss
@@ -819,3 +819,72 @@ ul.trace-tool{
 		}
 	}
 }
+
+
+.mark-tool{
+	.panel{
+		position: absolute;
+		width: 200px;
+		height: 200px;
+
+		right:40px;
+	}
+	.sub-panel{
+		background-color:rgba(0, 0, 0, 0.61);
+		color:#d8d7d7;
+		position: absolute;
+		top:210px;
+		width: 200px;
+		height: auto;
+
+		right:40px;
+		display: grid;
+		grid-template-columns:1fr 1fr;
+		grid-template-rows:auto auto 1fr;
+		*{
+			text-align: center;
+		}
+
+		.mark-tool-g2{
+			width: 100%;
+			grid-row: 2;
+			grid-column: 1/3;
+		}
+		.propertys{
+			width: 50%;
+			input{
+				width: 100%;
+
+			}
+		}
+
+	}
+	.body1{
+		.main-menu{
+			flex: 1 1 auto;
+			background-color: #b85223;
+			border: 1px solid blue;
+			width: 200px;
+		}
+
+		position: absolute;
+		//width: 200px;
+		height: 300px;
+		//margin-right: 200px!important;
+
+		background-color: #a8059a;
+		top:0px !important;
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		.panel-menu{
+
+			flex: 0 0 auto;
+			button{
+				display: inline-block;
+			}
+
+		}
+	}
+}
