--- a/templates/gt/webcar.html
+++ b/templates/gt/webcar.html
@@ -8,6 +8,7 @@
 	<div class="menu">
         <div id="panel-2"></div>
         <div id="panel-3"></div>
+        <div id="panel-9"></div>
         <div id="panel-7"></div>
         <div id="panel-6"></div>
         <div id="panel-5"></div>
