--- a/css/gt.css
+++ b/css/gt.css
@@ -19,7 +19,8 @@
   font-family: Arial, Helvetica, sans-serif, tahoma;
 }
 
-html, body {
+html,
+body {
   margin: 0px;
   height: 100%;
 }
@@ -65,10 +66,14 @@ form {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  justify-items: stretch;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  justify-items: stretch;
+}
+
+.gt-layout > .menu .sg-menu {
+  width: auto;
 }
 
 .gt-layout > .body {
@@ -289,11 +294,13 @@ form {
   padding: 0px !important;
 }
 
-.item:hover > a > .site-edit, .item:hover .geofence-edit {
+.item:hover > a > .site-edit,
+.item:hover .geofence-edit {
   visibility: visible;
 }
 
-.site-edit, .geofence-edit {
+.site-edit,
+.geofence-edit {
   width: 20px;
   height: 20px;
   margin-right: 6px;
@@ -641,14 +648,14 @@ form {
 
 ._sg-menu- .item.open > .sub-menu {
   border: 3px solid #0077ff;
-  -webkit-animation: acc-open  0.5s ease-out forwards;
-          animation: acc-open  0.5s ease-out forwards;
+  -webkit-animation: acc-open 0.5s ease-out forwards;
+          animation: acc-open 0.5s ease-out forwards;
 }
 
 ._sg-menu- .item.close > .sub-menu {
   border: 3px solid red;
-  -webkit-animation: acc-close  0.5s ease-out forwards;
-          animation: acc-close  0.5s ease-out forwards;
+  -webkit-animation: acc-close 0.5s ease-out forwards;
+          animation: acc-close 0.5s ease-out forwards;
 }
 
 .icon-unit {
