--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -1,5 +1,9 @@
-<div class="info-form-main">
+<div class="info-form-main unit-conn-{=connected}">
     <div class="name" data-id="vehicle_name"></div>
+    <div class="unit-conn">
+        <div class="true">Unidad Conectada</div>
+        <div class="false">Unidad Desconectada</div>
+    </div>
     <div class="row">
         <div>Fecha</div>
         <div>{=uDate}</div>
@@ -38,5 +42,10 @@
         <div data-detail="outputs" data-input-id="{=outputs.id}" data-input-value="{=outputs.on}"><span>{=outputs.name}</span><span data-input-value="{=outputs.value}">{=outputs.value}</span></div>
 
     </div>
+    
+    <div><input type="checkbox">Seguir</div>
+    <div><input type="checkbox">Activar Traza</div>
+    <div><button type="button">Posición</button></div>
+    <div><button type="button">Reiniciar</button></div>
 
 </div>
