--- a/css/gt_tool.css
+++ b/css/gt_tool.css
@@ -284,4 +284,34 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
+.sg-form {
+  display: -ms-grid;
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
+}
+
+.sg-form .page {
+  height: 100%;
+  overflow: auto;
+}
+
+.flex > .body {
+  height: 100%;
+  overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.flex > .body > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  height: 100%;
+  overflow: auto;
+}
 /*# sourceMappingURL=gt_tool.css.map */
