--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -733,17 +733,28 @@ form {
   height: 100%;
 }
 
+.now {
+  .info-comm {
+    .user {
+      display: none;
+    }
+  }
+}
 .info-comm {
   .main {
-    font-size: 11px;
+    font-size: 10px;
     color: rgb(244, 247, 224);
     background-color: #3a3a3aa9;
-
+    padding: 1px;
     display: grid;
     grid-gap: 0px;
-    grid-template-columns: 20px 70px 50px 90px auto;
+    grid-template-columns: 16px 60px 60px 60px 50px auto;
     grid-template-rows: 1.4em auto;
     overflow: hidden;
+    .ftime,
+    .date {
+      text-align: center;
+    }
     .btn-new {
       color: #1cbaf8;
       text-align: center;
@@ -763,6 +774,9 @@ form {
     }
     &.new {
       background-color: #a10c0ca9;
+      &:hover {
+        background-color: #0000009c;
+      }
     }
     .type {
       &[data-type="1"] {
@@ -803,9 +817,7 @@ form {
       padding: 2px;
       //border:1px solid yellow;
     }
-    > :nth-child(1) {
-      //background-color: rgba(0, 0, 0, 0.637);
-    }
+
     > :nth-child(4) {
       //word-wrap: normal;
       white-space: nowrap;
@@ -813,19 +825,20 @@ form {
 
       text-overflow: ellipsis;
     }
-    > :nth-child(6) {
+    > .detail {
       grid-column: 1/7;
       grid-row: 2;
 
       background-color: rgba(209, 24, 24, 0.808);
     }
     &:not(.open) {
-      > :nth-child(6) {
+      > .detail {
         display: none;
       }
     }
     &.open {
       > :nth-child(6) {
+        //display: none;
       }
     }
 
